[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tf-restormer"
version = "0.1.0"
description = "Time-Frequency Restormer speech enhancement"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core (inference-only)
    "numpy",
    "loguru",
    "rotary-embedding-torch",
    "pyyaml",
    "soundfile",
    "librosa",
    "tqdm",
    "scipy",
    "einops",
    "python-dotenv",
]

[project.optional-dependencies]
cpu = ["torch>=2.6", "torchaudio>=2.6"]
cu118 = ["torch>=2.6", "torchaudio>=2.6"]
cu124 = ["torch>=2.6", "torchaudio>=2.6"]
cu126 = ["torch>=2.6", "torchaudio>=2.6"]
cu128 = ["torch>=2.6", "torchaudio>=2.6"]
cu130 = ["torch>=2.6", "torchaudio>=2.6"]
mamba = ["causal-conv1d>=1.5.2", "mamba-ssm>=2.2.5"]
metrics-intrusive = ["pesq", "pystoi", "mir-eval", "pysptk", "pyworld", "fastdtw"]
metrics-nonintrusive = ["onnxruntime"]
metrics-neural = [
    "transformers",
    "utmosv2",
    "torch-pesq",
    "torch-stoi",
]
metrics-semantic = ["nltk", "levenshtein", "jellyfish"]
metrics-all = [
    "tf-restormer[metrics-intrusive,metrics-nonintrusive,metrics-neural,metrics-semantic]",
]
train = [
    "tensorboardX", "wandb", "torchinfo", "ptflops", "thop",
    "colorednoise", "pedalboard", "matplotlib", "seaborn",
    "pandas",
    "tf-restormer[metrics-all]",
]
# IMPORTANT: Always combine with an accelerator extra.
# Correct: uv sync --extra cu124 --extra mamba --extra train
# Correct: uv sync --extra cu126 --extra mamba --extra train
full = ["tf-restormer[train,mamba,cu124]"]

[tool.setuptools.packages.find]
include = ["tf_restormer*"]

[tool.setuptools.package-data]
"tf_restormer.models.TF_Restormer" = ["configs/*.yaml"]
"tf_restormer.utils" = ["NISQA_models/*.tar", "dnsmos_models/*.onnx", "km/*.bin"]

# After modifying dependencies, run: uv lock
# Only packages whose WHEELS live on a non-PyPI index need [tool.uv.sources] entries.
[tool.uv]
conflicts = [
    [{ extra = "cpu" }, { extra = "cu118" }, { extra = "cu124" }, { extra = "cu126" }, { extra = "cu128" }, { extra = "cu130" }],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu118", extra = "cu118" },
    { index = "pytorch-cu124", extra = "cu124" },
    { index = "pytorch-cu126", extra = "cu126" },
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-cu130", extra = "cu130" },
]
torchaudio = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu118", extra = "cu118" },
    { index = "pytorch-cu124", extra = "cu124" },
    { index = "pytorch-cu126", extra = "cu126" },
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-cu130", extra = "cu130" },
]
utmosv2 = { git = "https://github.com/sarulab-speech/UTMOSv2.git" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
